# TSU

./: .gitignore
3.2/: Методы Компиляции.docx
3.2/Child Po/: .gitignore  ВиТПО Дюбов Максим 1.docx  ВиТПО Дюбов Максим 2.docx  ВиТПО Дюбов Максим 3.docx  ВиТПО Дюбов Максим 4.docx
3.2/Compile/: compile.py  errorTest1.cmp  errorTest2.cmp  errorTest3.cmp  interpretator.py  lexer.py  parser.py  test1.cmp  test2.cmp  var_table.py
3.2/Complexity/: 1b.turing  lab1.docx  lab2.cpp  lab2branch.cpp  ~$lab1.docx
3.2/Imi/: imilab1.py  imilab10.py  imilab11.py  imilab12.py  imilab13.py  imilab2.py  imilab3.py  imilab4.py  imilab8.py  imilab9.py
3.2/OOAP/: .gitignore
3.2/OOAP/Lab1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
3.2/OOAP/Lab1/game/: character.cpp  character.h  characterfactory.cpp  characterfactory.h  warrior.cpp  warrior.h
3.2/SM_ML/: .RData  .Rhistory  Lab1.R  Lab2.R  Lab3.R  Lab4.R  Lab5.R  Lab6.R  flats R.csv  pulse.txt
3.2/Seti/: Kompyuternye_seti_ekzamen_2023_1.docx  Kompyuternye_seti_ekzamen_2023_1.txt  Seti.txt
4.1/DevOpsStuff/: Реферат 1.docx
4.1/GPU stuff/: CUDA.rar  Lab2.docx  NewCUDA.rar
4.1/NeuralStuff/: best_model_Architecture_4_Dilated.pth  best_model_Architecture_5_Multi_Kernel.pth  lab1.docx  lab2.docx  lab3.docx  lab4.docx  lab5.docx  model_results.csv
DMS/: .gitignore  DMS.py  DMSmediapipe.py  README.md  evaluate_dms.py  requirements.txt  ~$руктура вкр.docx  Структура вкр.docx
DMS/project/: README.md  main.py
NIR/: model.py
OS/lab1/: lab1.c
OS/lab2/: lab2client.c  lab2server.c
OS/lab3/: tsulab.c
(+126 files in other folders)
